networkpolicy/policies/logging/elasticsearch-nodes-ingress.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: elasticsearch-nodes-ingress
spec:
  podSelector:
    matchLabels:
      component: es
  ingress:
    - from:
      - podSelector:
          matchLabels:
            component: es
      ports:
        - port: 9300
          protocol: TCP
